--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@
 
 spring.cloud.stream.bindings.reportPeople-out-0.destination=people
 spring.cloud.stream.bindings.reportPeople-out-0.binder=rabbit
+
+spring.rsocket.server.port=7634
