--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
             <version>3.2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-rsocket</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
